tests/kulezi_tests/bad/invalid_op034.lat
int main() {
    true && "1";
    return 0;
}